--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,29 +23,27 @@
         
         <% if user_signed_in? %>
           <% if signed_in? && current_user.admin? %>
-            <li><%= link_to "Users", '#' %></li>
+            <li><%= link_to "Users", users_path %></li>
           <% end %>  
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", '#' %></li>
-              <li><%= link_to "Settings", '#' %></li>
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to('Logout', '#', :method => :delete) %>
+                <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to('Login', '#') %>
+          <li><%= link_to('Login', new_user_session_path) %>
         <% end %>            
 
       </ul>
-
-      <!-- Search Form -->
-      <%= render 'layouts/search_form' %>      
+          
 
     </nav>
 
