--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,21 @@
 
 <h1>Listing Users</h1>
 
-<table>
+<!-- User Table -->
+<table class="table table-hover">
+  
+  <!-- User Table  Header -->
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Admin</th>
+      <th><strong>First name</strong></th>
+      <th><strong>Last name</strong></th>
+      <th><strong>Admin</strong></th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
+  
+  <!-- User Table Rows with Information -->
   <tbody>
     <% @users.each do |user| %>
       <tr>
