Added the todo list model and views.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,36 @@
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
+      <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
+      <h1>User Profile</h1>
 
-<p>
-  <strong>Admin:</strong>
-  <%= @user.admin %>
-</p>
+      <div class="field form-control">
+        <strong>First name: &nbsp</strong>
+        <%= @user.first_name %>
+      </div>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+      <br>
+
+      <div class="field form-control">
+        <strong>Last name: &nbsp</strong>
+        <%= @user.last_name %>
+      </div>
+
+      <br>
+
+      <div class="field form-control">
+        <strong>Email: &nbsp</strong>
+        <%= @user.email %>
+      </div>
+
+      <div class="center">
+        <br>
+        <%= link_to 'Edit', edit_user_path(@user) %> |
+        <%= link_to 'Back', root_path %>
+      </div>
+
+    </div> 
+  </div> 
+</div>
