--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,21 +1,33 @@
-<%= form_for(@user) do |f| %>
-  
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :admin %><br>
-    <%= f.check_box :admin %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
 
-  
+    <%= form_for(@user) do |f| %>
 
-<% end %>
+      <!-- Errors -->
+      <%= render 'shared/error_messages' %>
+
+
+      <div class="field">
+        <%= f.label :first_name %><br>
+        <%= f.text_field :first_name, class: 'form-control' %>
+      </div>
+
+      <div class="field">
+        <%= f.label :last_name %><br>
+        <%= f.text_field :last_name, class: 'form-control'  %>
+      </div>
+
+      <div class="field">
+        <%= f.label :admin, class: "checkbox inline" do  %>
+          <%= f.check_box :admin %>
+          <span>ADMIN</span>
+        <% end %>
+      </div>
+      
+      <div class="actions">
+        <%= f.submit "Submit", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+
+  </div>
+</div>
