--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing User</h1>
+<div class="container">
+  <h1>Editing User</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+  <div class="center">
+    <br>
+    <%= link_to 'Show', @user %> |
+    <%= link_to 'Back', root_path %>
+  </div>
+</div>
