--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,46 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <h1>Listing Users</h1>
 
-<h1>Listing Users</h1>
+      <!-- User Table -->
+      <table class="table table-hover">
+        
+        <!-- User Table  Header -->
+        <thead>
+          <tr>
+            <th><strong>First name</strong></th>
+            <th><strong>Last name</strong></th>
+            <th><strong>Admin</strong></th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<!-- User Table -->
-<table class="table table-hover">
-  
-  <!-- User Table  Header -->
-  <thead>
-    <tr>
-      <th><strong>First name</strong></th>
-      <th><strong>Last name</strong></th>
-      <th><strong>Admin</strong></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        
+        <!-- User Table Rows with Information -->
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= user.first_name %></td>
+              <td><%= user.last_name %></td>
+              <td><%= user.admin %></td>
+              <td><%= link_to 'Show', user %></td>
+              <td><%= link_to 'Edit', edit_user_path(user) %></td>
+              <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-  
-  <!-- User Table Rows with Information -->
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.admin %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <br>
 
-<br>
-
-<%= link_to 'New User', new_user_path %>
+      <div class="center">
+        <br>
+        <% if signed_in? && current_user.admin? %> 
+          <%= link_to 'New User', new_user_path, class: "btn btn-primary" %>
+        <% end %>  
+      </div>
+      
+    </div>
+  </div>
+</div>
