--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New User</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<div class="container">
+  <h1>New User</h1>
+  <%= render 'form' %>
+  <div class="center">
+    <br>
+    <%= link_to 'Back', users_path %>
+  </div>  
+</div>
