--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -15,7 +15,7 @@
 
     <div class="field" >
       <%= f.label :action_item %><br>
-      <%= f.text_area :action_item, value: "What needs to be done?" %>
+      <%= f.text_area :action_item %>
     </div>
     <div class="field">
       <%= f.label :action_complete %><br>
