--- a/app/views/todo_lists/_todo_list.html.erb
+++ b/app/views/todo_lists/_todo_list.html.erb
@@ -1,15 +1,18 @@
 <%= link_to(edit_todo_list_path(todo_list)) do %>  
   <div class="list_current">
-    <%= todo_list.action_complete %>
 
     <%= form_for(todo_list) do |f| %>
-      <div class="field">
-        <%= f.label :action_complete %><br>
-        <%= f.check_box :action_complete %>
+
+      <!-- Bootstrap checked button. -->
+      <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-primary active">
+          <input type="checkbox" autocomplete="off" checked> Checkbox 1 (pre-checked)
+        </label>
       </div>
     <% end %>
 
     &nbsp|&nbsp
+    <%= todo_list.action_item %>
     
     
 
@@ -17,23 +20,18 @@
     &nbsp|&nbsp
     <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, todo_list, class: "btn btn-danger center block", method: :delete, data: { } %>
   </div>
-
   
 
 <% end %> 
 
 <hr>
-<%# views/posts/show.html.erb %> 
-<%= div_for(todo_list, class: post_css(todo_list)) do %> 
-
-  <%# This outputs two buttons which CSS rules make
-      sure only one is visible at a time %> 
-  <%= toggle_button_to 'icon-star', 'Favorite', todo_list_favorite_path(todo_list),
-       on: 'favorite btn',
-       off: 'unfavorite btn btn-primary' %> 
-
-<% end %>
+<div class="btn-group" data-toggle="buttons">
+  <label class="btn btn-primary active">
+    <input type="radio" name="options" id="option1" autocomplete="off" checked> Radio 1 (preselected)
+  </label>
+</div>
 <hr>
 
+<!-- #f.label :action_complete -->
 <% todo_list.action_complete %>
 <% todo_list.action_item %>
