--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,10 @@
 <footer class="footer">
   <small>
-    &copy; 2015 Bike Basingstoke Rails Demo
+    &copy; 2016 Another To Do List
   </small>
   <nav>
     <ul>
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-      <li><%= link_to 'Show Products', '#' %></li>     
+      <li><%= link_to "Home", root_path %></li>     
     </ul>
   </nav>
 </footer>
