--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
   <!-- Title -->
-  <title>BikeBasingstokeRailsDemo</title>
+  <title>My To Do List</title>
 
   <!-- Custom styles in assets folder linked here -->
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
