--- a/app/views/todo_lists/_formEdit.html.erb
+++ b/app/views/todo_lists/_formEdit.html.erb
@@ -26,7 +26,7 @@
     </span>
     
     <span class="field" >
-      <% f.label :action_item %><br>
+      <% f.label :action_item %>
       <%= f.text_area :action_item , class: 'form-control'%>
     </span>
 
