--- a/app/views/todo_lists/create.js.erb
+++ b/app/views/todo_lists/create.js.erb
@@ -1,2 +1,2 @@
 // Render comment partial to confirm receipt of message.
-$("#ToDoItems").prepend("<%= j render @todo_list %>");
+$("#ToDoItems--list").prepend("<%= j render @todo_list %>");
