--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse" role="navigation">
   <div class="container navbar-container">
     
-    <%= link_to "Bike Basingstoke", root_path, id: "logo" %>
+    <%= link_to ('<span class="glyphicon glyphicon-list-alt"></span>').html_safe, root_path, id: "logo" %>
     
     <!-- Smaller and Mobile Screen Nav bar-->
     <div class="navbar-header">
