--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,52 +1,22 @@
-<h1>My Todo List</h1>
+
+<h1> My To Do List </h1>
+<!-- To Do List Index Page -->
+<div class="container">
+  
+  <!-- Show the list of ToDo Items.-->
+  <div class="row">    
+    <div id="ToDoItems--form">
+      <%= render 'formSave' %>
+    </div>    
+  </div>
+
 
 <!-- Show the list of ToDo Items.-->
-<%= render 'form' %>
 
-<!-- Show the list of ToDo Items.-->
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <div id="ToDoItems">
-          
+  <div class="row">
+    <div id="ToDoItems--list">
       <%= render @todo_lists %> 
-        
     </div>
   </div>
-</div>
 
-
-
-
-
-<hr>
-how to append/prepend, hide/show, add/remove elements to a list or your page.
-
-
-<hr>
-
-<!-- Original Scaffolding index -->
-
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Action item</th>
-      <th>Action complete</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @todo_lists.each do |todo_list| %>
-      <tr>
-        <td><% todo_list.action_item %></td>
-        <td><% todo_list.action_complete %></td>
-        <td><% link_to 'Show', todo_list %></td>
-        <td><% link_to 'Edit', edit_todo_list_path(todo_list) %></td>
-        <td><% link_to 'Destroy', todo_list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<% link_to 'New Todo list', new_todo_list_path %>
+</div>  
