--- a/app/views/todo_lists/_formEdit.html.erb
+++ b/app/views/todo_lists/_formEdit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@todo_list, remote: true) do |f| %>
+<%= form_for(@todo_list) do |f| %>
   
   <div class="col-md-12">
     <% if @todo_list.errors.any? %>
