--- a/app/views/todo_lists/edit.html.erb
+++ b/app/views/todo_lists/edit.html.erb
@@ -7,8 +7,8 @@
   </div> 
 
   <div class="center">
-    <%= link_to 'Show', @todo_list %> |
-    <%= link_to 'Back', todo_lists_path %>
+    <% link_to 'Show', @todo_list %> 
+    <% link_to 'Back', todo_lists_path %>
   </div>  
 
 </div>
